H2 configurado por fin